syntax = "proto3";

import "com/example/internal/commonmodels/device/device.proto";

option java_multiple_files = true;
option java_package = "com.example.internal.input.reqreply.device.get_all.proto";

message GetAllDevicesRequest {

}

message GetAllDevicesResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated Device devices = 1;
  }

  message Failure {
    string message = 100;
  }
}
